# fieldcompare

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  make.bat
docs/source/: conf.py  fieldcompare.rst  fieldcompare_io.rst  fieldcompare_mesh.rst  fieldcompare_predicates.rst  fieldcompare_tabular.rst  index.rst  modules.rst  readme_link.rst
examples/api/: example1.csv  example1.py  example2._py  example2.py  example3._py  example3.py  mesh_data.vtu
examples/fenics/: fenics_poisson.py  poisson-reference.pvd  run_with_fenics_in_docker.sh
fieldcompare/: __about__.py  __init__.py  _array.py  _cli.py  _colors.py  _common.py  _comparison.py  _comparisons.py  _field.py  _field_comparison.py  _field_data_comparison.py  _field_sequence.py  _file_comparison.py  _format.py  _logging.py  _matching.py  _numpy_utils.py  _predicates.py  array.py  colors.py  compare.py  field.py  field_io.py  field_predicates.py  logging.py  matching.py  mesh_fields.py  predicates.py  protocols.py
fieldcompare/_cli/: __init__.py  _common.py  _deduce_domain.py  _dir_compare.py  _dir_mode.py  _file_compare.py  _file_comparison.py  _file_mode.py  _junit.py  _logger.py  _main.py  _test_suite.py
fieldcompare/_field_io/: __init__.py  _common.py  _csv.py  _json.py  _mesh.py  _mesh_io.py  _reader_map.py
fieldcompare/_mesh_fields/: __init__.py  _mesh_fields.py  _mesh_fields_mapped.py  _mesh_fields_mappings.py
fieldcompare/field_io/: __init__.py  _csv_reader.py
fieldcompare/field_io/vtk/: _appendix.py  _helpers.py  _pvd_reader.py  _reader_map.py  _vtu_reader.py
fieldcompare/io/: __init__.py  _csv_reader.py  _mesh_io.py
fieldcompare/io/vtk/: __init__.py  _appendix.py  _compressors.py  _encoders.py  _helpers.py  _pvd_reader.py  _pvtk_readers.py  _reader_map.py  _vti_reader.py  _vtp_reader.py  _vtr_reader.py  _vts_reader.py  _vtu_reader.py  _vtu_writer.py  _xml_reader.py
fieldcompare/mesh/: __init__.py  _cell_type.py  _cell_type_maps.py  _io.py  _mesh.py  _mesh_equal.py  _mesh_field_transformations.py  _mesh_fields.py  _mesh_fields_comparator.py  _permuted_mesh.py  _structured_mesh.py  _transformations.py  cell_types.py  meshio_utils.py  permutations.py  protocols.py
fieldcompare/mesh/_vtk/: __init__.py  _appendix.py  _compressors.py  _decoders.py  _pvtk_readers.py  _vtp_reader.py  _vtu_reader.py  _xml_reader.py
fieldcompare/predicates/: __init__.py  _predicates.py
fieldcompare/tabular/: __init__.py  _common.py  _csv_field_reader.py  _table.py  _tabular_fields.py
test/: _common.py  context.py  pytest.ini  test_array.py  test_cli.py  test_colors.py  test_csv_field_reader.py  test_deactivate_text_styling.py  test_exact_equality.py  test_examples.py  test_field_data_comparator.py  test_field_data_comparison.py  test_field_data_sequence.py  test_field_equality.py  test_field_exact_equality.py  test_field_fuzzy_equality.py  test_field_interface.py  test_field_matching.py  test_fields_compare.py  test_file_comparison.py  test_file_matching.py  test_fuzzy_equality.py  test_io_csv.py  test_io_vtk.py  test_json_field_reader.py  test_logging.py  test_mesh.py  test_mesh_fields.py  test_mesh_io.py  test_mesh_io_conversions.py  test_mesh_reading.py  test_structured_mesh.py  test_table.py  test_tabular_io.py  test_time_series_reading.py  test_vtk_equality.py  test_vtk_io.py  test_xdmf_time_series_equality.py
test/data/: generate_test_meshes.py  poisson_time_series_2d.h5  poisson_time_series_2d.xdmf  poisson_time_series_3d.pvd  poisson_time_series_3d.vtu  test_mesh.vtu  test_mesh_permutated.vtu  test_mesh_permutated_perturbed.vtu  test_non_conforming_mesh.vtu  test_non_conforming_mesh_permutated.vtu  test_non_conforming_mesh_permutated_perturbed.vtu  test_non_conforming_mesh_with_ghost_points.vtu  test_non_conforming_mesh_with_non_overlapping_ghost_points.vtu  test_non_conforming_mesh_with_non_overlapping_ghost_points_permutated.vtu  test_tabular_data.csv  test_time_series.h5  test_time_series.xdmf  test_time_series_permutated.h5  test_time_series_permutated.xdmf  test_time_series_perturbed.h5  test_time_series_perturbed.xdmf
test/vtkfiles/: pvd_time_series_2d_in_2d-00000.vtu  pvd_time_series_2d_in_2d-00001.vtu  pvd_time_series_2d_in_2d-00002.vtu  pvd_time_series_2d_in_2d-00003.vtu  pvd_time_series_2d_in_2d-00004.vtu  pvd_time_series_2d_in_2d-00005.vtu  pvd_time_series_2d_in_2d-00006.vtu  pvd_time_series_2d_in_2d-00007.vtu  pvd_time_series_2d_in_2d-00008.vtu  pvd_time_series_2d_in_2d-00009.vtu  pvd_time_series_2d_in_2d-00010.vtu  pvd_time_series_2d_in_2d.pvd  pvti_ascii_2d_in_2d_rotated-0.vti  pvti_ascii_2d_in_2d_rotated-1.vti  pvti_ascii_2d_in_2d_rotated.pvti  pvti_base64_appended-0.vti  pvti_base64_appended-1.vti  pvti_base64_appended-2.vti  pvti_base64_appended-3.vti  pvti_base64_appended.pvti  pvtp_2d_in_2d-00001.vtp  pvtp_2d_in_2d.pvtp  pvtr_ascii-0.vtr  pvtr_ascii-1.vtr  pvtr_ascii-2.vtr  pvtr_ascii-3.vtr  pvtr_ascii.pvtr  pvts_raw-0.vts  pvts_raw-1.vts  pvts_raw-2.vts  pvts_raw-3.vts  pvts_raw.pvts  pvtu_2d_in_2d-1.vtu  pvtu_2d_in_2d.pvtu  pvtu_parallel-0.vtu  pvtu_parallel-1.vtu  pvtu_parallel.pvtu  pvtu_sequential_reference.vtu  vti_3d_in_3d.vti  vti_ascii_2d_in_2d_rotated.vti  (+49 more)
