[metadata]
name = fieldcompare
version = 1.0
author = Dennis Gläser
author_email = dennis.glaeser@iws.uni-stuttgart.de
description = Comparison of data fields in files
url = https://gitlab.com/dglaeser/fieldcompare
project_urls =
    Code=https://gitlab.com/dglaeser/fieldcompare
    Issues=https://gitlab.com/dglaeser/fieldcompare/issues
keywords =
    data comparison
    regression test

[options]
packages = find:
install_requires = meshio[all]>=5.3
python_requires = >=3.8

[options.packages.find]
where = .

[options.extras_require]
all = colorama>=0.4.3

[options.entry_points]
console_scripts =
    fieldcompare = fieldcompare._cli:main

[flake8]
max-line-length = 120
ignore = E302, E305, E306, E226
per-file-ignores =
    __init__.py: F401
    test/*: F401
