# SPDX-FileCopyrightText: 2023 Dennis Gläser <dennis.glaeser@iws.uni-stuttgart.de>
# SPDX-License-Identifier: GPL-3.0-or-later

[options]
packages = find:
install_requires =
    numpy>=1.26,<3;python_version>='3.12'
    numpy>=1.24,<3;python_version<'3.12'
    colorama>=0.4.3,<1
python_requires = >=3.8

[options.packages.find]
where = .

[options.extras_require]
all =
    meshio[all]>=5.3,<6
    lz4<5

[flake8]
max-line-length = 120
ignore = E302, E305, E306, E226, E203
per-file-ignores =
    __init__.py: F401
    test/*: F401
